--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "react-modal": "^3.14.3",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.1",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
     
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
