--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
     "@types/react-modal": "^3.12.1",
     "axios": "^0.21.4",
     "miragejs": "^0.1.41",
+    "polished": "^4.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-modal": "^3.14.3",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.1",
-    "web-vitals": "^1.0.1",
-    
+    "web-vitals": "^1.0.1"
+  },
+  "devDependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -22,7 +24,6 @@
     "@types/react-dom": "^17.0.0",
     "@types/styled-components": "^5.1.14",
     "typescript": "^4.1.2"
-    
   },
   "scripts": {
     "start": "react-scripts start",
